testdata/baselines/reference/submodule/conformance/jsdocImportType2.errors.txt
use.js(7,19): error TS2307: Cannot find module './mod1' or its corresponding type declarations.


==== use.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    /** @typedef {import("./mod1")} C
     * @type {C} */
    var c;
    c.chunk;
    
    const D = require("./mod1");
                      ~~~~~~~~
!!! error TS2307: Cannot find module './mod1' or its corresponding type declarations.
    /** @type {D} */
    var d;
    d.chunk;
    
==== types.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
    declare var module: { exports: any };
==== mod1.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    module.exports = class Chunk {
        constructor() {
            this.chunk = 1;
        }
    }
    